Replace internal Sun Base64 encoder with Commons-codec
git-svn-id: http://scm.dspace.org/svn/repo/trunk@2552 9c30dcfa-912a-0410-8fc2-9e0234be79fd